<resources>
    <string name="app_name">AppLayouts</string>
    <string name="txtName">Nome: </string>
    <string name="txtNameHint">Digite seu nome</string>
    <string name="txtPhone">Fone: </string>
    <string name="txtPhoneHint">Digite seu telefone</string>
    <string name="txtEmail">E-mail: </string>
    <string name="txtEmailHint">Digite seu e-mail</string>
    <string name="txtGender">Gênero</string>
    <string name="txtFemale">Feminino</string>
    <string name="txtMale">Masculino</string>
    <string name="txtPrefiroNaoResponder">Prefiro não  responder</string>
    <string name="txtAcceptEmail">Aceita receber e-mail?</string>
    <string name="txtCidade">Cidade</string>
    <string name="txtSave">Salvar</string>
    <string name="txItemSelectStateWarning">You must select a State</string>

    <string-array name="arState">
        <item>Selecione...</item>
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>
</resources>